css/style.css
html, body{
  width: 100%;
  overflow-y: scroll; 
  margin: 0px;
}

body {
  color: white;
  font-family: "museo-sans", sans-serif;
  font-weight: 300;
}

a, a:visited {
  color: #333;
  text-decoration: none;
  outline: 0;
}

::selection {
  background: rgb(229, 94, 90);
  color: white;
  text-shadow: none;
}

header {
  position: fixed;
  min-height: 100%;
  background-color: rgb(34, 34, 34);
  width: 15%;
  color: #333;
}

section#main {
  margin-left: 15%;
  position: relative;
  z-index: 10;
  background-color: white;
  border-left: 1px solid #D6D6D6;
  min-height: 900px;
}

#blogTitle{
  margin-top: 30px;
  text-align: center
}

#blogTitle h1{
  font-size: 30px;
  line-height: 30px;
  font-weight: bold;
  font-size: 2.8em;
  padding-left: 20px;
  padding-right: 20px;
  line-height: 50px;
  border: none;
  font-family: "myriad-pro", sans-serif;
  display: block;
  color: white;
}

article{
  width: auto;
  display: block;
  position: relative;
  padding-left: 50px;
  padding-right: 50px;
  padding-top: 40px;
  padding-bottom: 40px;
  min-height: 130px;
}

article h2{
  font-size: 2.8em;
  font-weight: 600;
  max-width: 500px;
  line-height: 1.1em;
  margin-bottom: 14px;
}

article h2 a{
  text-decoration: none;
  font-weight: 900;
}

article p {
  max-width: 500px;
}

ul#categories{
  padding: 20px;
}

ul#categories li{
  margin: 5px 0px 5px 0px;
  font-size: 14px;
  padding: 10px;
  background-color: rgb(234, 234, 234);
  border: 2px solid transparent;
}

ul#categories li a{
  display: block;
  color: rgb(34, 34, 34);
  font-weight: bold;
  width: 100%;
}

ul#categories li:hover{
  background-color: rgb(229, 94, 90);
}

ul#categories li#search{
  padding: 0px;
}

#searchInput {
  background: url("/images/magnifier.png") 14px center no-repeat;
  border: none;
  border-color: #F1F1F1;
  text-indent: 40px;
  padding: 10px 0px 10px 0px;
  width: 100%;
  margin: 0px;
}

input#searchInput:focus{
  outline: none;
  background-color: white;
}

#searchSubmit {
  display: none;
}

#searchForm {
  width: 100%;
  padding-bottom: 1px;
}

.postDate {
  font-style: italic;
  font-size: 14px;
  color: rgb(34, 34, 34);
}

p{
  font-size: 18px;
  line-height: 27px;
  margin-top: 22px;
  margin-bottom: 22px;
  color: rgb(34, 34, 34);
}

@media screen and (max-width: 1200px) {

 header {
    position: relative;
    width: 100%;
    overflow: hidden;
    min-height: 0px;    
  }

  section#main {
    width: 100%;
    min-width: 0;
    margin-left: 0px;
    padding-top: 10px;
    padding-left: 10px;
    position: relative;
    z-index: 10;
  }

  ul#categories li{
    max-width: none;
    display: block;
    width: auto;
  }

  #blogTitle{
   margin-top: 20px;
  }

  article{
    margin: auto;
    display: block;
    padding: 10px;
  }

}

